2016-01-22  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_model_gpposterior: Preserve row and column names

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Preserver
	row and column names in input/output data.
	* core/@stk_model_gpposterior/stk_model_update.m: Idem.
	* core/@stk_model_gpposterior/stk_predict.m: Use double() to
	extract the numerical content of the 'output_data' field.

	stk_optim_init.m: Fix the value of algo.model.dim

	* iago/utils/stk_optim_init.m: Fix the value of algo.model.dim.

	More work on stk_model_gpposterior properties

	* core/@stk_model_gpposterior/get_input_data.m: Rename variable.
	* core/@stk_model_gpposterior/get_output_data.m: Rename variable.
	* core/@stk_model_gpposterior/fieldnames.m: New function.
	* core/@stk_model_gpposterior/set.m: New function.
	* core/@stk_model_gpposterior/subsasgn.m: New function.
	* core/@stk_model_gpposterior/set_lognoisevariance.m: New function.
	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Accept
	prior model structure with missing 'dim' field.

	Properties input_dim/output_dim for stk_model_gpposterior objects

	* core/@stk_model_gpposterior/get.m: Add new properties
	'input_dim', 'output_dim'. Make 'dim' an alias for 'input_dim'.
	* core/@stk_model_gpposterior/get_dim.m: Rename to
	get_input_dim.m.
	* core/@stk_model_gpposterior/get_input_dim.m: Renamed from
	get_dim.m.
	* core/@stk_model_gpposterior/get_output_dim.m: New function that
	returns the output dimension, currently always one.
	* core/@stk_model_gpposterior/disp.m: Display the new
	properties. Improve the overall display.
	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Remove
	field 'dim'.
	* core/@stk_model_gpposterior/stk_predict.m: Read .dim directly
	from the prior model structure.

2016-01-18  Julien Bect  <julien.bect@centralesupelec.fr>

	New functions to update models with new observations

	* core/@stk_model_gpposterior/stk_model_update.m: New function.
	* core/stk_model_update.m: New function.