@@ -1,47 +1,0 @@
-% STK_PLOT2D  [deprecated]
-%
-% See also: stk_factorialdesign/contour, stk_factorialdesign/mesh, ...
-
-% Copyright Notice
-%
-%    Copyright (C) 2014 SUPELEC
-%
-%    Author:  Julien Bect  <julien.bect@centralesupelec.fr>
-
-% Copying Permission Statement
-%
-%    This file is part of
-%
-%            STK: a Small (Matlab/Octave) Toolbox for Kriging
-%               (http://sourceforge.net/projects/kriging)
-%
-%    STK is free software: you can redistribute it and/or modify it under
-%    the terms of the GNU General Public License as published by the Free
-%    Software Foundation,  either version 3  of the License, or  (at your
-%    option) any later version.
-%
-%    STK is distributed  in the hope that it will  be useful, but WITHOUT
-%    ANY WARRANTY;  without even the implied  warranty of MERCHANTABILITY
-%    or FITNESS  FOR A  PARTICULAR PURPOSE.  See  the GNU  General Public
-%    License for more details.
-%
-%    You should  have received a copy  of the GNU  General Public License
-%    along with STK.  If not, see <http://www.gnu.org/licenses/>.
-
-function stk_plot2d (plotfun, x, z, varargin)
-
-if ~ isa (x, 'stk_factorialdesign')
-    errmsg = 'x should be an stk_factorialdesign object.';
-    stk_error (errmsg, 'IncorrectArgument');
-end
-
-warning ('STK:stk_plot2d:Deprecated', ...
-    'stkplot2d is deprecated, please use @stk_factorialdesign/plot instead');
-
-if ~ ischar (plotfun)  % assume it's a function handle, then
-    plotfun = func2str (plotfun);
-end
-
-feval (plotfun, x, z, varargin{:});
-
-end % function
